# zotero-web-mcp

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  smithery.yaml
.github/workflows/: python-tests.yml
docs/: getting-started.md
src/zotero_mcp/: __init__.py  better_bibtex_client.py  cli.py  client.py  server.py  setup_helper.py  utils.py
src/zotero_web_mcp/: better_bibtex_client.py  cli.py  client.py  pdfannots_helper.py  server.py  setup_helper.py
tests/: test_basic.py
